--- a/lighthouse-gallery.framerfx/importer.config.json
+++ b/lighthouse-gallery.framerfx/importer.config.json
@@ -76,6 +76,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -147,6 +149,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -218,6 +222,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -289,6 +295,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -360,6 +368,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -431,6 +441,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -502,6 +514,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -573,6 +587,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -644,6 +660,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -715,6 +733,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -786,6 +806,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -857,6 +879,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -928,6 +952,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -999,6 +1025,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -1070,6 +1098,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -1141,6 +1171,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -1212,6 +1244,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
@@ -1283,6 +1317,8 @@
         "cursor",
         "children",
         "font",
+        "padding",
+        "margin",
         "backgroundAttachment",
         "backgroundClip",
         "backgroundColor",
