--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@typescript-eslint/parser": "^4.1.0",
     "copy-to-clipboard": "^3.3.1",
     "cross-env": "^5.2.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
