framer: add ignores

--- a/lighthouse-gallery.framerfx/importer.config.json
+++ b/lighthouse-gallery.framerfx/importer.config.json
@@ -70,6 +70,9 @@
     "LightingChip": {
       "ignore": true
     },
+    "Spacing": {
+      "ignoredProps": ["width", "height"]
+    },
     "DisplayLarge": {
       "ignore": false,
       "ignoredProps": [
