framer: update importer config

--- a/lighthouse-gallery.framerfx/importer.config.json
+++ b/lighthouse-gallery.framerfx/importer.config.json
@@ -71,7 +71,7 @@
       "ignore": true
     },
     "Spacing": {
-      "ignoredProps": ["width", "height"]
+      "ignoredProps": ["width", "height", "display"]
     },
     "DisplayLarge": {
       "ignore": false,
