chore: change framer package name

--- a/lighthouse-gallery.framerfx/package.json
+++ b/lighthouse-gallery.framerfx/package.json
@@ -10,7 +10,7 @@
   },
   "framer": {
     "id": "01efca91-8ae0-46a1-9e26-73e4c13fdf22",
-    "displayName": "Lighthouse"
+    "displayName": "Lighthouse Design System"
   },
   "author": "yongmin ruucm",
   "dependencies": {
