--- a/lighthouse-gallery.framerfx/package.json
+++ b/lighthouse-gallery.framerfx/package.json
@@ -16,9 +16,10 @@
 	"dependencies": {
 		"@framer/framer.default": "^1.71.0",
 		"@framer/maximedegreve.tinyfaces": "^1.4.0",
-		"@framer/ruucm-h.enhanced-lottie": "1.51.0",
+		"@framer/ruucm-h.enhanced-lottie": "1.56.0",
 		"framer-motion": "^2.9.4",
-		"module-alias": "^2.2.2"
+		"module-alias": "^2.2.2",
+		"react-feather": "^2.0.9"
 	},
 	"name": "@framer/ruucm-h.lighthouse",
 	"version": "1.159.0"
