--- a/lighthouse-gallery.framerfx/importer.config.json
+++ b/lighthouse-gallery.framerfx/importer.config.json
@@ -74,7 +74,7 @@
     },
     "StyledLink": {
       "ignore": false,
-      "ignoredProps": ["children"]
+      "ignoredProps": ["children", "to"]
     },
     "ColorChip": {
       "ignore": true
