--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "lint": "eslint '{src,documentation-site,examples,lighthouse-gallery.framerfx/code}/**/*.{js,ts,tsx}' --quiet --fix",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -=c rollup.config.ts",
-    "start": "rollup -c rollup.config.ts -w",
+    "build": "tsc --module commonjs && rollup -=c rollup.config.mjs",
+    "start": "rollup -c rollup.config.mjs --w",
     "framer": "cd lighthouse-gallery.framerfx && component-importer generate --force && rm code/withHOC.tsx && cd .. && eslint '{src,lighthouse-gallery.framerfx/code}/**/*.{js,ts,tsx}' --quiet --fix",
     "precommit": "lint-staged",
     "docs:dev": "next documentation-site",
@@ -80,17 +80,18 @@
     "remark-html": "^12.0.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
+    "rollup": "^4.0.2",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-visualizer": "^4.1.1",
     "shelljs": "^0.8.3",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
     "ts-node": "^7.0.1",
+    "tslib": "^2.6.2",
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
